# grup

./: .gitignore  .last_build_id  CONTRIBUTING.md  README.md  analysis_options.yaml  build.yaml  flavorizr.yaml  flutter_bootstrap.js  flutter_launcher_icons.yaml  flutter_native_splash.yaml  flutter_service_worker.js  index.html  main.dart.js  manifest.json  pubspec.yaml  supabase_local_instance.json  version.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yaml  verify.yaml
android/app/: build.gradle
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
assets/env/: dev.json  local.json
assets/google_fonts/: OFL.txt
docs/: README.md
env/: local.json
ios/: Podfile
ios/Flutter/: devDebug.xcconfig  devProfile.xcconfig  prodDebug.xcconfig  prodProfile.xcconfig
ios/Runner/: Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/ci_scripts/: ci_post_clone.sh  ci_post_xcodebuild.sh
lib/: app.dart  app.freezed.dart  flavors.dart  go_router_builder.dart  go_router_builder.g.dart  main.dart  router.dart  widgetbook.dart  widgetbook.directories.g.dart
lib/actions/: actions.dart  (+15 more)
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
supabase/: config.toml  seed.sql
supabase/util/: migrate.py  pyproject.toml
test/: remote_entities_test.dart  remote_entity_reducer_tester.dart  repositories_test.dart  schedules_test.dart  selectors_test.dart  util_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+320 files in other folders)
